Remove rhel-ose

--- a/manifest-c9s.yaml
+++ b/manifest-c9s.yaml
@@ -21,13 +21,13 @@ repos:
   - baseos
   - appstream
   # CentOS Extras Common repo for SIG RPM GPG keys
-  # - extras-common
+  - extras-common
   # CentOS NFV SIG repo for openvswitch
-  - sig-nfv
+  - nfv
   # CentOS Cloud SIG repo for cri-o, cri-tools and conmon-rs
   - sig-cloud-okd
   # Include RHCOS 9 repo for oc, hyperkube
-  - rhel-9.2-server-ose-4.14
+  #- rhel-9.2-server-ose-4.14
 
 # We include hours/minutes to avoid version number reuse
 automatic-version-prefix: "414.9.<date:%Y%m%d%H%M>"
